--- a/src/pages/Store.module.css
+++ b/src/pages/Store.module.css
@@ -13,6 +13,13 @@ main {
 
 @media (max-width: 50em) {
     main {
-        margin: 0;
+        max-width: fit-content;
+        margin: 10px;
+    }
+
+    .grid {
+        margin: auto;
+        padding: 0;
+        gap: 20px;
     }
 }
